--- a/app.css
+++ b/app.css
@@ -38,7 +38,6 @@ input[type=checkbox]:focus + label:before {
 }
 .btn {
   font-size: 140%;
-  text-transform: uppercase;
   letter-spacing: 1px;
   border: 0;
   background-color: #16214D;
@@ -66,6 +65,9 @@ h3 {
   width: 300px;
   margin-bottom: 60px;
 }
+img.logo {
+  width: 60px;
+}
 .home-description {
   font-weight: 100;
   margin: 100px 0;
@@ -89,6 +91,6 @@ label {
   padding-left: 10%;
   margin-bottom: 20px;
 }
-.login-page .login-box {
-  padding: 100px 0;
+.login-page .login-box, .index{
+  padding: 40px 0;
 }
